--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,1 +1,14 @@
-<p>playground works!</p>
+<dsp-resource-view [iri]="'http://rdfh.ch/0805/-280OTrsR_2b-N1KADTNZg'"></dsp-resource-view>
+<dsp-search-panel
+  [route]="'/search'"
+  [projectfilter]="true"
+  [expert]="true"
+  [advanced]="true">
+</dsp-search-panel>
+
+<dsp-still-image *ngIf="!loading" [images]="stillImageRepresentations" [imageCaption]="caption" [activateRegion]="actReg" (regionClicked)="regionClicked($event)"></dsp-still-image>
+
+<br/>
+<button style="margin-top: 100px;" (click)="actReg = 'activeRegion'">Activate Region 1</button>
+<br/>
+<button style="margin-top: 10px;" (click)="actReg = 'activeRegion2'">Activate Region 2</button>
